--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <title>Personal Portfolio</title>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Kenia&family=Mukta:wght@300;400;700&family=Rowdies:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Personal Portfolio Website</title>
     <h1>mona portfolio</h1>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Container-->
+    <div class="container">
+      <!--Navigation-->
+      <div class="menu-icon">
+        <div class="link-line-1"></div>
+        <div class="link-line-2"></div>
+      </div>
+      <nav class="navigation">
+        <div class="section-border"></div>
+        <div class="nav-items">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Projects</a>
+          <a href="#">Gallery</a>
+          <a href="#">Blog</a>
+          <a href="#">Clients</a>
+          <a href="#">Pricing</a>
+        </div>
+      </nav>
+      <!--End of Navigation-->
+      <a href="#">Contact</a>
+    </div>
+    <!--End of Container-->
+
+    <script src="script.js"></script>
+  </body>
 </html>
