--- a/index.html
+++ b/index.html
@@ -35,13 +35,49 @@
           <a href="#">Blog</a>
           <a href="#">Clients</a>
           <a href="#">Pricing</a>
+          <a href="#">Contact</a>
         </div>
       </nav>
       <!--End of Navigation-->
-      <a href="#">Contact</a>
+
+      <!--Landing-->
+      <section class="landing">
+        <h1 class="section-bg-heading">Web Developer</h1>
+        <div class="logo">
+          <span>Web</span>
+          <span>Dev</span>
+        </div>
+        <div class="banner">
+          <div class="section-border"></div>
+          <div class="developer-info">
+            <h3 class="greeting">Hello, <span>my name is</span></h3>
+            <h1 class="name"><span>Ona</span>Girdzijauskaite</h1>
+            <h3 class="prof">I'am <span>Web Developer</span></h3>
+            <p class="about">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              iusto odio ipsam, ad quo voluptates molestiae debitis ullam
+              facilis in.
+            </p>
+            <div class="social-media">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="cv">
+                <button type="button" class="btn btn-cv">Download cv</button>
+                <span>My Skills</span>
+            </div>
+          </div>
+          <div class="developer-img">
+            <div class="dev-img-wrapper">
+<img src="./images/developer.png" alt="img of developer">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End of Landing-->
     </div>
     <!--End of Container-->
-
     <script src="script.js"></script>
   </body>
 </html>
