added changes landing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <title>Personal Portfolio Website</title>
-    <h1>mona portfolio</h1>
+    <!-- <h1>mona portfolio</h1> -->
   </head>
   <body>
     <!--Container-->
@@ -51,7 +51,7 @@
           <div class="section-border"></div>
           <div class="developer-info">
             <h3 class="greeting">Hello, <span>my name is</span></h3>
-            <h1 class="name"><span>Ona</span>Girdzijauskaite</h1>
+            <h1 class="name"><span>Ona</span>Girdzi...</h1>
             <h3 class="prof">I'am <span>Web Developer</span></h3>
             <p class="about">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
@@ -59,18 +59,26 @@
               facilis in.
             </p>
             <div class="social-media">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
             </div>
             <div class="cv">
-                <button type="button" class="btn btn-cv">Download cv</button>
-                <span>My Skills</span>
+              <button type="button" class="btn cv-btn">Download cv</button>
+              <span>My Skills</span>
             </div>
           </div>
           <div class="developer-img">
             <div class="dev-img-wrapper">
-<img src="./images/developer.png" alt="img of developer">
+              <img src="./images/developer.png" alt="img of developer" />
+            </div>
+            <div class="dev-experiance dev-work">
+              <span>15</span>
+              <span>years of experiance</span>
+            </div>
+            <div class="dev-projects dev-work">
+              <span>5+</span>
+              <span>completed projects</span>
             </div>
           </div>
         </div>
