added js menu change

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="container">
       <!--Navigation-->
       <div class="menu-icon">
-        <div class="link-line-1"></div>
-        <div class="link-line-2"></div>
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
       </div>
       <nav class="navigation">
         <div class="section-border"></div>
