added card progress

--- a/index.html
+++ b/index.html
@@ -84,6 +84,82 @@
         </div>
       </section>
       <!--End of Landing-->
+      <!--Skill-->
+      <section class="skills">
+        <h1 class="section-bg-heading">My Skills</h1>
+        <h1 class="section-heading">Profesional Skills</h1>
+        <h3 class="sub-heading">My <span>Skills</span></h3>
+        <div class="section-border"></div>
+        <div class="skills-cards">
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+          <div class="skills-card">
+            <div class="skill">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia
+              nostrum natus reiciendis repellat officiis hic.
+            </p>
+            <div class="skills-card-progress"></div>
+          </div>
+        </div>
+      </section>
+      <!--End of Skill-->
     </div>
     <!--End of Container-->
     <script src="script.js"></script>
