--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
           <div class="skills-card">
             <div class="skill">
-              <span>HTML</span>
+              <span>CSS</span>
               <span>95%</span>
             </div>
             <p>
@@ -115,7 +115,7 @@
           </div>
           <div class="skills-card">
             <div class="skill">
-              <span>HTML</span>
+              <span>React</span>
               <span>95%</span>
             </div>
             <p>
@@ -160,6 +160,131 @@
         </div>
       </section>
       <!--End of Skill-->
+      <!--Projects-->
+      <section class="section project">
+        <h1 class="section-bg-heading">My Projects</h1>
+        <h1 class="section-heading">Portfolio</h1>
+        <h3 class="sub-heading">My <span>Projects</span></h3>
+        <div class="projects-cars">
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project1.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Contact Form</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project2.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Calculator</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project3.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Contact Forms</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project4.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Website</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project5.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Menu</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="./images/project6.png" alt="" />
+            </div>
+            <div class="techs">
+              <span>HTMKL</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <h3 class="project-name">Profile Card</h3>
+            <p class="project-description-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
+              fugit.
+            </p>
+            <button type="button" class="project-btn">
+              See Project <i class="fa-sharp fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <button type="button" class="btn">View More</button>
+        </div>
+        <div class="div section-border"></div>
+      </section>
+      <!--End of Project-->
     </div>
     <!--End of Container-->
     <script src="script.js"></script>
