--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
       </section>
       <!--End of Skill-->
       <!--Projects-->
-      <section class="section project">
+      <section class="projects">
         <h1 class="section-bg-heading">My Projects</h1>
         <h1 class="section-heading">Portfolio</h1>
         <h3 class="sub-heading">My <span>Projects</span></h3>
-        <div class="projects-cars">
+        <div class="projects-cards">
           <div class="project-card">
             <div class="project-img">
               <img src="./images/project1.png" alt="" />
             </div>
             <div class="techs">
-              <span>HTMKL</span>
+              <span>HTML</span>
               <span>CSS</span>
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Contact Form</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -195,7 +195,7 @@
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Calculator</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -214,7 +214,7 @@
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Contact Forms</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -233,7 +233,7 @@
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Website</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -252,7 +252,7 @@
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Menu</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -271,7 +271,7 @@
               <span>JavaScript</span>
             </div>
             <h3 class="project-name">Profile Card</h3>
-            <p class="project-description-desc">
+            <p class="project-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reiciendis adipisci, inventore reprehenderit voluptatibus beatae
               fugit.
@@ -282,7 +282,7 @@
           </div>
           <button type="button" class="btn">View More</button>
         </div>
-        <div class="div section-border"></div>
+        <div class="section-border"></div>
       </section>
       <!--End of Project-->
     </div>
