--- a/index.html
+++ b/index.html
@@ -285,6 +285,62 @@
         <div class="section-border"></div>
       </section>
       <!--End of Project-->
+
+      <!--Contact Sectiont-->
+      <section class="contact">
+        <h1 class="section-bg-heading">Contact Me</h1>
+        <h1 class="section-heading">Contact</h1>
+        <h3 class="sub-heading">Let'S <span>Have Some Talk</span></h3>
+        <div class="section-border"></div>
+        <div class="contact-content">
+          <div class="contact-left">
+            <div class="adress">
+              <i class="fa-solid fa-location-dot"></i>
+              <div class="contact-info">
+                <span>Adress</span>
+                <span>New York, USA</span>
+              </div>
+            </div>
+            <div class="freelance">
+              <i class="fa-regular fa-user"></i>
+              <div class="contact-info">
+                <span>Freelance</span>
+                <span>Available Right Now</span>
+              </div>
+            </div>
+            <div class="email">
+              <i class="fa-regular fa-envelope"></i>
+              <div class="contact-info">
+                <span>Email</span>
+                <span>johnsmith@webdev.com</span>
+              </div>
+            </div>
+            <div class="phone">
+              <i class="fa-rsolid fa-phone"></i>
+              <div class="contact-info">
+                <span>Phone</span>
+                <span>+123456789</span>
+              </div>
+            </div>
+          </div>
+          <div class="contact-right">
+            <form>
+          <div class="input-groups">
+            <div class="input-group">
+              <label for="name">Your Full Name <i class="fa-solid fa-asterisk"></i></label>
+              <input type="text">
+            </div>
+            <div class="input-group">
+              <label for="email">Your Email Adress<i class="fa-solid fa-asterisk"></i></label>
+              <input type="email">
+            </div>
+          </div>
+          
+            </form>
+          </div>
+        </div>
+      </section>
+      <!--End Contact section-->
     </div>
     <!--End of Container-->
     <script src="script.js"></script>
